# planning_tools

./: README.md
common_agents/: CMakeLists.txt  package.xml
common_agents/include/common_agents/: DifferentialDriveAgent.hpp  DifferentialDriveState.hpp  DifferentialDriveSystemInput.hpp  HolonomicAgent.hpp  HolonomicState.hpp  HolonomicSystemInput.hpp  PedestrianAgent.hpp
common_agents/src/: DifferentialDriveAgent.cpp  DifferentialDriveState.cpp  DifferentialDriveSystemInput.cpp  HolonomicAgent.cpp  HolonomicState.cpp  HolonomicSystemInput.cpp
common_agents/test/: UnitTest.cpp
common_agents_python/: CMakeLists.txt  package.xml  setup.py
common_agents_python/python/common_agents_python/: __init__.py
common_agents_python/src/: DifferentialDriveAgentPy.cpp  DifferentialDriveStatePy.cpp  DifferentialDriveSystemInputPy.cpp  HolonomicAgentPy.cpp  HolonomicStatePy.cpp  HolonomicSystemInputPy.cpp  TypeRegistrationPy.cpp  python_module.cpp
common_agents_python/test/: Test.py
planner_algorithms/: CMakeLists.txt  package.xml
planner_algorithms/include/planner_algorithms/: Dijkstra.hpp  DistanceTransform.hpp  MapChangeDetection.hpp  OpenCvConversions.hpp  Support.hpp  Voronoi.hpp
planner_algorithms/include/planner_algorithms/implementation/: DijkstraImpl.hpp  DistanceTransformImpl.hpp  MapChangeDetectionImpl.hpp  VoronoiImpl.hpp
planner_algorithms/src/: DistanceTransform.cpp  MapChangeDetection.cpp  Voronoi.cpp
planner_algorithms/test/: DijkstraProfiling.cpp  DijkstraTest.cpp  DistanceTransformTest.cpp  MapChangeDetectionTest.cpp  OpenCvConversionsTest.cpp  VoronoiTest.cpp
planner_algorithms_python/: CMakeLists.txt  package.xml  setup.py
planner_algorithms_python/python/planner_algorithms/: __init__.py
planner_algorithms_python/src/: DijkstraPy.cpp  DistanceTransformPy.cpp  MapChangeDetectionPy.cpp  VoronoiPy.cpp  python_module.cpp
planner_algorithms_python/test/: Test.py
planner_interfaces/: CMakeLists.txt  package.xml
planner_interfaces/include/planner_interfaces/: Agent.hpp  AgentWithTarget.hpp  Exceptions.hpp  FclShapes.hpp  FclSupport.hpp  Frame.hpp  HolonomicVelocity.hpp  MathSupport.hpp  OccupancyGrid.hpp  PlannerInterface.hpp  PlannerInterfaceDebugWrapper.hpp  Pose2d.hpp  Position2d.hpp  ReferencePathPlannerInterface.hpp  ReturnCodes.hpp  Shape.hpp  StampedType.hpp  State.hpp  Support.hpp  SystemInput.hpp  TargetPlannerInterface.hpp  TestAgent.hpp  Time.hpp  Trajectory.hpp
planner_interfaces/include/planner_interfaces/implementation/: MathSupportImplementation.hpp  OccupancyGridImplementation.hpp  PlannerInterfaceDebugWrapperImplementation.hpp  Pose2dImplementation.hpp  Position2dImplementation.hpp  ShapeImplementation.hpp  StateImplementation.hpp  TimeImplementation.hpp  TrajectoryImplementation.hpp
planner_interfaces/src/: MathSupport.cpp  OccupancyGrid.cpp  PlannerInterface.cpp  Support.cpp  TestAgent.cpp  Time.cpp
planner_interfaces/test/: BasicTest.cpp  TestPlanner.cpp  TestPlanner.hpp  TestPlannerInterfaceDebugWrapper.cpp
planner_interfaces_python/: CMakeLists.txt  package.xml  setup.py
planner_interfaces_python/include/planner_interfaces_python/: ArchivePy.hpp  PythonPickleSupport.hpp  SupportPy.hpp
planner_interfaces_python/python/planner_interfaces_python/: __init__.py
planner_interfaces_python/python/planner_interfaces_python/util/: __init__.py
planner_interfaces_python/src/: AgentPy.cpp  ArchivePy.cpp  MathSupportPy.cpp  NumpyEigen21DontAlign.cpp  OccupancyGridPy.cpp  PlannerInterfacePy.cpp  Pose2dPy.cpp  Position2dPy.cpp  ReturnCodePy.cpp  ShapePy.cpp  StampedTypePy.cpp  StatePy.cpp  SystemInputPy.cpp  TargetPlannerInterfacePy.cpp  TimePy.cpp  TrajectoryPy.cpp  python_module.cpp
planner_interfaces_python/test/: Test.py
probabilistic_planner/: CMakeLists.txt  package.xml
probabilistic_planner/cmake/: probabilistic_planner-extras.cmake.in
probabilistic_planner/include/probabilistic_planner/: FeatureScaler.hpp  MathSupport.hpp  ProbabilisticLearner.hpp  ProbabilisticPlanner.hpp  Support.hpp
probabilistic_planner/include/probabilistic_planner/features/: CacheEntryDistanceTransform.hpp  ErrorTermLearning.hpp  FeatureContainer.hpp  FeaturePairwiseIntegratedDistance.hpp  FeatureProduct.hpp  (+22 more)
probabilistic_planner/src/: FeatureScaler.cpp  ProbabilisticLearner.cpp  ProbabilisticPlanner.cpp  generatePropertyTreeXml.cpp
probabilistic_planner/src/features/: ErrorTermLearning.cpp  FeatureContainer.cpp  Features.cpp  RawFeature.cpp  RawFeaturePairwise.cpp  RawFeatureSingleton.cpp
probabilistic_planner/src/sampling/: Autocorrelation.cpp
probabilistic_planner/src/state_representation/: ContinuousScene.cpp  OptAgentTypeRegistry.cpp  SceneSnapshot.cpp  Trajectory.cpp
probabilistic_planner/src/support/: DensityComputations.cpp
probabilistic_planner/test/: OverlappingTimeAgentsPairwiseFeature.hpp  PosFeature.hpp  ProfileEvaluateJacobiansExpressions.cpp  ProfileExpressionsVsEvaluators.cpp  Profiling.cpp  Support.cpp  Support.hpp  TestContinuousScene.cpp  TestFeatureScaler.cpp  TestFeatures.cpp  TestLearning.cpp  TestOptAgent.cpp  TestOptimization.cpp  TestSceneSnapshot.cpp  TestSerialization.cpp  TestSplineFit.cpp  TestSupport.cpp  TestTrajectory.cpp  UnitTest.cpp  testPlanner.cpp  test_main.cpp
probabilistic_planner_python/: CMakeLists.txt  package.xml  setup.py
probabilistic_planner_python/include/probabilistic_planner_python/: FeatureContainerModifiable.hpp
probabilistic_planner_python/python/probabilistic_planner/: __init__.py
probabilistic_planner_python/src/: AddGridErrorTerm2dPy.cpp  AutocorrelationPy.cpp  ContinuousScenePy.cpp  DensityComputationsPy.cpp  FeatureContainerPy.cpp  FeatureImplementationsPy.cpp  FeatureScalerPy.cpp  OptAgentPy.cpp  ProbabilisticLearnerPy.cpp  RawFeaturePairwisePy.cpp  RawFeaturePy.cpp  RawFeatureSingletonPy.cpp  SceneSnapshotPy.cpp  TrajectoryPy.cpp  python_module.cpp
probabilistic_planner_python/test/: Test.py
simple_cache/: CMakeLists.txt  package.xml
simple_cache/include/simple_cache/: CacheEntryInterface.hpp  SimpleCache.hpp
simple_cache/test/: SimpleCacheTest.cpp
(+18 files in other folders)
