<package format="2">
  
  <name>planner_interfaces_python</name>
  <version>1.0.0</version>
  <description>
    python exports for planner_interfaces
  </description>
  
  <maintainer email="ulrich.schwesinger@mavt.ethz.ch">Ulrich Schwesinger</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>python_module</depend>
  <depend>numpy_eigen</depend>
  <depend>planner_interfaces</depend>
  
  <test_depend>gtest</test_depend>

</package>