<?xml version="1.0"?>
<package format="2">
  <name>probabilistic_planner</name>
  <version>0.0.0</version>
  <description>Probabilistic planning and learning framework</description>

  <author email="mark.pfeiffer@mavt.ethz.ch">Mark Pfeiffer</author>
  <maintainer email="mark.pfeiffer@mavt.ethz.ch">Mark Pfeiffer</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>sm_logging</depend>
  <depend>sm_timing</depend>
  <depend>sm_random</depend>
  <depend>planner_interfaces</depend>
  <depend>common_agents</depend>
  <depend>aslam_backend</depend>
  <depend>aslam_splines</depend>
  <depend>aslam_backend_expressions</depend>
  <depend>sm_value_store</depend>
  <depend>simple_cache</depend>
  <depend>planner_algorithms</depend>
  
</package>
